--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Dark mode switch -->
     <!-- Navigation -->
     <nav id="nav">
         <a href="#home">HOME</a>
@@ -58,7 +59,14 @@
     </section>
     <!-- Contacts Section -->
     <section id="contacts">
-
+        <div class="social-icons">
+            <i class="fab fa-github"></i>
+            <i class="fab fa-twitter"></i>
+            <i class="fab fa-facebook-f"></i>
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-linkedin-in"></i>
+            <i class="fab fa-youtube-square"></i>
+        </div>
     </section>
     <!-- Script -->
     <script src="script.js"></script>
