--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
 </head>
 <body>
     <!-- Dark mode switch -->
+    <div class="theme-switch-wrapper">
+        <span id="toggle-icon">
+            <span id="toggle-text">Light Mode</span>
+            <i class="fa fa-sun"></i>
+        </span>
+        <label class="theme-switch">
+            <input type="checkbox">
+            <div class="slider round">
+            </div>
+        </label>
+    </div>
     <!-- Navigation -->
     <nav id="nav">
         <a href="#home">HOME</a>
